@@ -1,0 +1,265 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u63ed\u9732\u4eba\u6027\u7684\u8907\u96dc\u6df1\u5ea6\uff1a\u97d3\u570b\u5c0e\u6f14\u91d1\u5927\u7950\u65b0\u4f5c\u300a\u96b1\u85cf\u7684\u9762\u5b54\u300b\u5373\u5c07\u4e0a\u6620", "description": "\u63ed\u9732\u4eba\u6027\u7684\u8907\u96dc\u6df1\u5ea6\uff1a\u97d3\u570b\u5c0e\u6f14\u91d1\u5927\u7950\u65b0\u4f5c\u300a\u96b1\u85cf\u7684\u9762\u5b54\u300b\u5373\u5c07\u4e0a\u6620", "url": "https://www.famechos.me/news/\u63ed\u9732\u4eba\u6027\u7684\u8907\u96dc\u6df1\u5ea6\uff1a\u97d3\u570b\u5c0e\u6f14\u91d1\u5927\u7950\u65b0\u4f5c\u300a\u96b1\u85cf\u7684\u9762\u5b54\u300b\u5373\u5c07\u4e0a\u6620.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-22T20:08:45.106555+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/揭露人性的複雜深度：韓國導演金大祐新作《隱藏的面孔》即將上映.html"/>
+<meta name="description" content="韓國導演金大祐最新力作《隱藏的面孔》即將震撼上映，揭露人性的複雜深度，帶領觀眾探索隱藏在表面下的真實自我。">
+
+<meta name="keywords" content="隱藏的面孔, 金大祐, 韓國電影, 人性, 複雜深度, 真實自我, 新作上映">
+
+<link rel="stylesheet" href="../main-nav.css">
+<link rel="stylesheet" href="../main-content.css">
+<link rel="stylesheet" href="../main-small.css">
+<link rel="stylesheet" href="../post.css">
+<link rel="stylesheet" href="../main-footer.css">
+<link rel="stylesheet" href="../news.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/揭露人性的複雜深度：韓國導演金大祐新作《隱藏的面孔》即將上映.html" />
+        <meta property="og:title" content="揭露人性的複雜深度：韓國導演金大祐新作《隱藏的面孔》即將上映" />
+        <meta property="og:description" content="揭露人性的複雜深度：韓國導演金大祐新作《隱藏的面孔》即將上映" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="揭露人性的複雜深度：韓國導演金大祐新作《隱藏的面孔》即將上映" />
+        <meta property="twitter:description" content="揭露人性的複雜深度：韓國導演金大祐新作《隱藏的面孔》即將上映" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+<meta property="og:type" content="article" />
+<meta name="robots" content="index, follow" />
+<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+         
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+         
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+     
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>揭露人性的複雜深度：韓國導演金大祐新作《隱藏的面孔》即將上映</h1>
+</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">22/10/2024</p>
+        </div>
+<p>韓國導演金大祐最新作品《隱藏的面孔》將於11月20日上映。該片根據2011年西班牙和哥倫比亞同名電影改編，講述了一個關於人性複雜性的故事。</p>
+<p>金大祐導演表示，人性中沒有絕對的善或惡，只有由意圖和欲望驅動的自發性決定。他希望通過這部電影探索人性的複雜深度。</p>
+<p>電影講述了管弦樂團指揮家成鎮和他的未婚妻、樂團成員秀妍的故事。秀妍突然失蹤，留下了一段告別視頻。成鎮在失落和孤獨中遇到了秀妍的替代者美珠，兩人開始了一段戀情。然而，秀妍竟然被關在自己家的密室中，偷偷觀察著一切。</p>
+<p>金大祐導演在設計迷宮般的密室時，希望能夠代表人性中埋藏在潛意識中的神秘和未知方面。他相信每個人都有一個這樣的密室，藏在自己的意識中。在電影中，這個密室具有象徵意義，暗示著人性的這些方面。</p>
+<p>演員曹汝贞表示，她在拍攝秀妍被關在密室中的場景時，需要付出巨大的努力來表現秀妍的絕望。她試圖描繪秀妍在密室中敲打門和牆壁、喊叫的強度和聲音的變化。</p>
+<p>宋承憲表示，成鎮來自一個普通家庭，但他爬上了社會階梯，與來自富裕家庭的秀妍在一起。然而，當他遇到美珠時，他的隱藏的欲望被喚醒。他與導演進行了深入的討論，關於他的角色。他希望描繪成鎮為一個隱藏自己真實性格的人，對自己的欲望不願意公開表達。</p>
+<p>宋承憲曾與金大祐導演合作拍攝2014年的情色電影《Obsessed》，他將這部電影描述為自己職業生涯的突破。他對那部電影有很美好的回憶，所以他願意接受導演對他們下一部作品的任何建議。</p>
+<p>演員曹汝贞表示，《隱藏的面孔》是她與金大祐導演的第三次合作，之前她曾參演《The Servant》和《Obsessed》。她相信導演是能夠發現演員新面貌的人，她對他有深深的信任。</p>
+<p>韓國政府表示，將採取一系列「分階段措施」應對朝鮮民主主義人民共和國（朝鮮）和俄羅斯的軍事合作。</p>
+<p>韓國正在考慮派遣人員前往烏克蘭，以監測朝鮮軍隊的活動。據悉，俄羅斯和朝鮮的旗幟在烏克蘭戰場上共同展示，引起了外界的關注。</p>
+<p>朝鮮方面則否認了有關派遣軍隊援助俄羅斯在烏克蘭的傳聞，稱其為「毫無根據的謠言」。</p>
+
+<p>資料來源：Yonhap News Agency</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/9JLU6vfYSyU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+     
+      <div class ="related-news-box">
+        
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/BTS成員鄭號錫完成18個月兵役　笑容滿面揮別軍營生活.html">BTS成員鄭號錫完成18個月兵役　笑容滿面揮別軍營生活</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/CN Blue 回歸初心！第 10 張迷你專輯《X》強調純粹樂器聲音，樂團領袖鄭容和：我們要做真正的樂團.html">CN Blue 回歸初心！第 10 張迷你專輯《X》強調純粹樂器聲音，樂團領袖鄭容和：我們要做真正的樂團</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/ILLIT強勢回歸！新專輯《I'll Like You》融入年齡段想法的音樂.html">ILLIT強勢回歸！新專輯《I'll Like You》融入年齡段想法的音樂</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+     
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
