@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Tue, 22 Oct 2024 20:06:12 +0800</lastBuildDate>
+  <lastBuildDate>Tue, 22 Oct 2024 20:08:59 +0800</lastBuildDate>
 
   <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
@@ -387,5 +387,11 @@ YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於1
   <description> Cho Yong-pil 證明年齡不是音樂生涯的障礙：K-pop 傳奇人物的第 20 張專輯凱旋歸來...</description>
   <category>K-Pop</category>
   <pubDate>Tue, 22 Oct 2024 20:06:12 +0800</pubDate>
+</item><item>
+  <title>揭露人性的複雜深度：韓國導演金大祐新作《隱藏的面孔》即將上映</title>
+  <link>https://www.famechos.me/news/揭露人性的複雜深度：韓國導演金大祐新作《隱藏的面孔》即將上映.html</link>
+  <description>懸疑驚悚片《隱藏的面孔》探索人性的複雜深度。...</description>
+  <category>K-Pop</category>
+  <pubDate>Tue, 22 Oct 2024 20:08:59 +0800</pubDate>
 </item></channel>
 </rss>
