@@ -386,4 +386,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/揭露人性的複雜深度：韓國導演金大祐新作《隱藏的面孔》即將上映.html</ns0:loc>
+    <ns0:lastmod>2024-10-22T20:08:59+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
