@@ -58,3 +58,4 @@ https://en.yna.co.kr/view/AEN20241017007600315?section=culture/k-pop&input=rss
 https://en.yna.co.kr/view/AEN20241017001051315?section=culture/k-pop&input=rss
 https://www.koreaherald.com/view.php?ud=20241014050541
 https://en.yna.co.kr/view/AEN20241021007100315?section=culture/k-pop&input=rss
+https://en.yna.co.kr/view/AEN20241022000851315?section=culture/k-pop&input=rss
